@@ -6,16 +6,17 @@ use UV::Util ();
 use Test::More;
 
 require Alien::libuv;
-  diag "version        = ", Alien::libuv->config('version');
-  diag "cflags         = ", Alien::libuv->cflags;
-  diag "cflags_static  = ", Alien::libuv->cflags_static;
-  diag "libs           = ", Alien::libuv->libs;
-  diag "libs_static    = ", Alien::libuv->libs_static;
-  diag "bin_dir        = ", $_ for Alien::libuv->bin_dir;
-  diag "Install type   = ", Alien::libuv->install_type;
+diag "version        = ", Alien::libuv->config('version');
+diag "cflags         = ", Alien::libuv->cflags;
+diag "cflags_static  = ", Alien::libuv->cflags_static;
+diag "libs           = ", Alien::libuv->libs;
+diag "libs_static    = ", Alien::libuv->libs_static;
+diag "bin_dir        = ", $_ for Alien::libuv->bin_dir;
+diag "Install type   = ", Alien::libuv->install_type;
 
-  diag " ";
-  diag " ";
+diag " ";
+diag " ";
+
 can_ok(
     'UV::Util', (
         qw(UV_UNKNOWN_HANDLE UV_ASYNC UV_CHECK UV_FS_EVENT UV_FS_POLL),
@@ -39,9 +40,45 @@ ok(UV::Util::get_total_memory(), 'get_total_memory: Got memory sizez');
 ok(UV::Util::get_total_memory() > UV::Util::get_free_memory(), 'memory: more total than free');
 isa_ok(UV::Util::loadavg(), 'ARRAY', 'loadavg: array ref received');
 ok(UV::Util::uptime(), 'uptime: got uptime');
-ok(UV::Util::resident_set_memory(), 'resident_set_memory: got value');
+
+{
+    # doesn't work in MinGW
+    my $rss;
+    my $err = do { # catch
+        local $@;
+        eval { $rss = UV::Util::resident_set_memory(); 1; }; # try
+        $@;
+    };
+    if ($^O eq 'cygwin') {
+        ok(!$rss, "resident_set_memory: not implemented on cygwin. no response.");
+        like($err, qr/function not implemented/, 'resident_set_memory: got the appropriate error on cygwin');
+    }
+    else {
+        ok(!$err, 'resident_set_memory: did not error out on this platform');
+        ok($rss, 'resident_set_memory: got value');
+    }
+}
+
 isa_ok(UV::Util::interface_addresses(), 'ARRAY', 'interface_addresses: array ref received');
-isa_ok(UV::Util::cpu_info, 'ARRAY', 'cpu_info: got array ref');
+
+{
+    # doesn't work in MinGW
+    my $cpu;
+    my $err = do { # catch
+        local $@;
+        eval { $cpu = UV::Util::cpu_info(); 1; }; # try
+        $@;
+    };
+    if ($^O eq 'cygwin') {
+        ok(!$cpu, "cpu_info: not implemented on cygwin. no response.");
+        like($err, qr/function not implemented/, 'cpu_info: got the appropriate error on cygwin');
+    }
+    else {
+        ok(!$err, 'cpu_info: did not error out on this platform');
+        ok($cpu, 'cpu_info: got value');
+    }
+}
+
 isa_ok(UV::Util::getrusage, 'HASH', 'getrusage: got hashref');
 ok(UV::Util::guess_handle_type(\*STDIN), 'guess_handle_type: got a result');
 ok(UV::Util::version(), 'version: got back a string representation');
